--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,23 @@ services:
       HOSTNAME: santamark4u
     restart: unless-stopped
 
-  nginx:
+  webserver:
     image: nginx:latest
     ports:
-      - "80:80"
+      - 80:80
+      - 443:443
+    restart: always
     volumes:
-      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
     depends_on:
       - santa
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+  
 
