--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -1,7 +1,29 @@
 server {
-  listen 80;
+    listen 80;
+    listen [::]:80;
 
-  location / {
-    proxy_pass http://santa:8000/;
-  }
+    server_name santamark4xmas.com www.santamark4xmas.com;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://santamark4xmas.com;
+    }
+}
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name example.org;
+
+    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    
+    location / {
+    	proxy_pass http://santa:8000/
+    }
 }
